--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,5 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: work
-      run: bash ./build.sh
+      run: sudo bash ./build.sh
+
 
