--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -36,11 +36,17 @@ jobs:
     #     asset_path: ./workdir/bin/aria2c.aarch64
     #     asset_name: aria2c.aarch64
     #     asset_content_type: application/octet-stream
-    - name: Upload Multiple Assets
-      uses: AButler/upload-release-assets@v1.0
+    # - name: Upload Multiple Assets
+    #   uses: AButler/upload-release-assets@v1.0
+    #   with:
+    #     files: "./workdir/bin/*"
+    #     repo-token: ${{ secrets.GITHUB_TOKEN }}
+    #     release-tag: latest
+    - uses: meeDamian/github-release@1.0
       with:
-        files: "./workdir/bin/*"
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        release-tag: latest
+        name: latet
+        token: ${{secrets.GITHUB_TOKEN}}
+        files: "./workdir/bin/"
+        allow_override: true
 
 
