--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -44,10 +44,11 @@ jobs:
     #     release-tag: latest
     - uses: meeDamian/github-release@1.0
       with:
-        name: latet
+        name: latest
         tag: latest
         token: ${{secrets.GITHUB_TOKEN}}
         gzip: false
+        allow_override: true
         files: >
           workdir/bin/aria2c.aarch64
           workdir/bin/aria2c.aarch64.upx
@@ -57,6 +58,6 @@ jobs:
           workdir/bin/aria2c.win32.upx.exe
           workdir/bin/aria2c.win64.exe
           workdir/bin/aria2c.win64.upx.exe
-        allow_override: true
+        
 
 
